[package]
name = "rustynes-frontend"
description = "RustyNES: cross-platform NES emulator binary (winit + wgpu + cpal + egui)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["nes", "emulator", "famicom", "wgpu", "cpal"]
categories = ["emulators", "games"]

[lib]
name = "rustynes_frontend"
path = "src/lib.rs"
# `cdylib` produces the `.wasm` artifact that wasm-bindgen + trunk
# consume to ship the browser frontend. `rlib` keeps the regular
# Rust crate-graph integration so the `[[bin]]` below can depend on
# the lib without duplicating sources.
crate-type = ["cdylib", "rlib"]

[features]
# v1.3.0 Sprint 1.4 — two wasm32 frontends. Exactly one is compiled
# (each provides a `#[wasm_bindgen(start)]`, which must be unique).
# `wasm-winit` (default) is the full experience: the same winit +
# wgpu + egui App as native, with the debugger overlay + NTSC filter.
# `wasm-canvas` is the lightweight ~316 KB embed mode: a direct
# canvas-2D blit with Web Audio + localStorage save state, no
# debugger. Build the embed mode with
# `trunk build --no-default-features --features wasm-canvas`.
#
default = ["wasm-winit", "emu-thread", "help-tui", "gpu-timing"]
wasm-winit = []
wasm-canvas = []

# v1.4.0 Workstream H3 — interactive ratatui terminal help browser
# (`rustynes help` on a TTY). Default ON; a minimal build can drop it with
# `--no-default-features`. NATIVE-ONLY: it pulls `ratatui` + `crossterm`, which
# live in the `cfg(not(target_arch = "wasm32"))` dep table below, so this feature
# is inert on wasm (the `help_tui` module is `cfg`-gated out there too) and the
# wasm size budget is unaffected. clap 4 styled `--help` + `help <topic>` +
# completions (H1/H2) are UNCONDITIONAL (no feature flag) — only the TUI is gated.
help-tui = ["dep:ratatui"]

# v2.8.0 Phase 5 increment 3 — dedicated emulation thread (default ON,
# native-only; a no-op on wasm32, which is single-threaded). Single-player
# frame production runs off the winit event-loop thread so UI/render stalls
# never disturb emulation cadence. Disable (`--no-default-features` + the
# wasm/RA features you want) to A/B against the synchronous Phases 0-4 drive;
# the synchronous path is retained until the threaded path is proven, then
# collapsed (the v2.0.0 -> v2.0.1 pattern). Pulls in `libc` (native-only) for
# the best-effort per-thread priority elevation on Linux.
emu-thread = ["dep:libc"]

# v2.7.0 — RetroAchievements integration (default OFF, native-only).
#
# Pulls in `rustynes-cheevos` (the safe `RaClient` over vendored rcheevos). Gated
# off by default so the standard build links no extra C and the wasm builds
# never see it (`rustynes-cheevos` is only a dependency of the
# `cfg(not(target_arch = "wasm32"))` target table below). Enable with
# `cargo build -p rustynes-frontend --features retroachievements`.
#
# Also pulls in `ureq` (off-thread badge-PNG fetch) + `png` (decode the badge
# bytes to an `egui::ColorImage`). Both are native-only optional deps below;
# the badge-image cache lives in `src/debugger/badge_cache.rs`, gated the same
# way as the rest of the RA integration.
retroachievements = ["dep:rustynes-cheevos", "dep:rustynes-ra", "dep:ureq"]

# v1.1.0 beta.3 (Workstream E flagship) — Lua scripting (default OFF, native-only).
# Pulls in `rustynes-script` (sandboxed vendored Lua 5.4). Off by default so the
# shipped build links no Lua/`cc` and the wasm builds never see it. Enable with
# `cargo build -p rustynes-frontend --features scripting`.
scripting = ["dep:rustynes-script"]

# v1.7.0 "Forge" Workstream E1 — host-mediated `comm.*` IPC (default OFF,
# native-only). Forwards `rustynes-script/script-ipc` (which adds the sandboxed
# `comm` Lua table) and activates the frontend's `script_host` module — the
# component that ACTUALLY OWNS the TCP / HTTP / WebSocket / memory-mapped-file
# connections. The script never touches a socket: it queues a marshalled
# `CommCmd`, the host does the I/O off the emulator lock, and feeds plain values
# back via `CommResult`. IPC is a new non-deterministic source, so every verb is
# gated like `emu.write` and is disabled under replay / netplay / RA exactly the
# same way. Reuses the already-present native-only optional `ureq` (HTTP); TCP +
# the in-process memory-mapped-file bridge use std only, so no new dependency is
# pulled. Requires `scripting`. Enable with:
#   cargo build -p rustynes-frontend --features scripting,script-ipc
script-ipc = ["scripting", "rustynes-script/script-ipc", "dep:ureq"]

# v1.2.0 Workstream F4 — EXPERIMENTAL wasm Lua scripting (default OFF, wasm-only).
# Forwards into `rustynes-script`'s pure-Rust piccolo backend (the
# `rustynes-script-wasm` alias in the wasm32 dep table below, built
# `--no-default-features --features script-wasm` so it never pulls mlua's C). A
# SEPARATE feature from native `scripting`; enable with
# `cargo build -p rustynes-frontend --target wasm32-unknown-unknown --features script-wasm`.
# piccolo (via ahash) transitively needs `getrandom 0.2`'s `js` backend on
# wasm32, so this feature also activates the `getrandom` shim below. Explicitly
# NOT byte-parity with the native mlua engine — see ADR 0012.
script-wasm = ["dep:rustynes-script-wasm", "dep:getrandom", "dep:getrandom_03"]

# v2.8.0 Phase 0 — GPU pass timing (native-only; default ON since v1.5.0 "Lens"
# Workstream H5 so the shipped build's Performance panel + perf log report a
# real `gpu_ms` instead of a blank column).
#
# Requests wgpu `TIMESTAMP_QUERY` ONLY when the adapter offers it (degrading to
# `gpu_ms = None` otherwise) and brackets the per-frame command encoder with
# two timestamps resolved through a 3-deep async readback ring. Timestamp
# queries are a pure side channel — they record WHEN passes ran, never WHAT is
# rendered — so the presented image stays byte-for-byte identical with the
# feature on or off; the determinism contract is presentation-only here and is
# unaffected. The whole timer is `cfg(not(target_arch = "wasm32"))`, so adding
# this to the default set leaves both wasm builds (and the wasm size budget)
# unchanged. Drop it with `--no-default-features` for a build that requests no
# extra device features at all.
gpu-timing = []

# v1.2.0 beta.2 (Workstream C3) — HD-pack / mod loader (minimal first cut),
# native-only, default OFF. Forwards to `rustynes-core/hd-pack`, which gates the
# per-pixel `HdTileSource` telemetry export inside the PPU. The frontend's
# `hdpack.rs` loads a Mesen-style `hires.txt` (folder or `.zip`), hashes each
# rendered tile's CHR bytes (Mesen CRC32), and substitutes hi-res replacement
# images at blit time. Off by default so the shipped / wasm / no_std builds are
# byte-identical to today; with it ON but NO pack loaded, the presentation is
# also byte-identical (the substitution path is `Option`-gated). Reuses the
# already-present native-only `png` (decode replacement images) and `zip`
# (archive packs) deps. See `docs/ppu-2c02.md` §HD-pack tile-source export.
hd-pack = ["rustynes-core/hd-pack", "dep:rustynes-hdpack"]

# v1.5.0 "Lens" Workstream G — EXPERIMENTAL casual-mode browser RetroAchievements
# (default OFF, wasm-only). The ADR 0015 carryover. Activates the wasm-only
# `wasm_cheevos` module, which talks to an Emscripten-built rcheevos SIDE MODULE
# (`web/cheevos/`, produced by `scripts/cheevos/build_rcheevos_wasm.sh`) through
# a `#[wasm_bindgen]` bridge — NOT the native `rustynes-cheevos` C FFI (which
# cannot link into a `wasm32-unknown-unknown` cdylib; see ADR 0015 + the script).
# Casual-only is STRUCTURAL (no hardcore API at any layer). Pulls no extra Rust
# deps (the wasm32 dep table already carries wasm-bindgen), so it is inert on
# native and the default wasm builds (and the wasm size budget) are unchanged.
# Enable with:
#   cargo build -p rustynes-frontend --target wasm32-unknown-unknown --features browser-cheevos
browser-cheevos = []

# v1.5.0 "Lens" Workstream A — explicit alias for the always-on core
# `debug-hooks` feature. The frontend ALREADY pulls `rustynes-core` with
# `debug-hooks` on (so the devtool panels — Trace / Event Viewer / the v1.5.0
# Input Miniatures + PPU Event heatmap + scanline trace — always compile), but
# the core's `debug-hooks` telemetry is OFF in the headless test/bench builds,
# which is what keeps AccuracyCoin / the determinism oracle byte-identical. This
# alias just lets `cargo clippy -p rustynes-frontend --features debug-hooks`
# resolve to the same build; it adds nothing (the dependency below is the real
# enable). The output-only `debug-hooks` core code is determinism-neutral.
debug-hooks = ["rustynes-core/debug-hooks"]

# v1.6.0 "Studio" Workstream G — A/V recording (default OFF, native-only).
#
# Adds the `av_record` frontend module: a read-only tap that pipes the
# already-produced framebuffer + drained audio to an external `ffmpeg` process
# (rawvideo over stdin + a mono f32le audio sidecar) to mux an .mp4/.mkv. It
# pulls NO extra Rust deps (only the system `ffmpeg` binary at run time, with a
# graceful "ffmpeg not found" fallback), so it is inert on native when off and
# the wasm builds (and the wasm size budget) are unchanged. The recorder never
# advances the emulator or alters the per-frame output, so the determinism
# contract + AccuracyCoin are unaffected. Enable with:
#   cargo build -p rustynes-frontend --features av-record
av-record = []

# v1.7.0 "Forge" #54 — the `full` maximal-NATIVE-feature build. One opt-in
# feature aggregating every native feature so a single command (the
# `cargo full-run` / `cargo full-build` aliases in `.cargo/config.toml`) builds
# the most fully-featured desktop binary. PURELY OPT-IN: the shipped/default
# build is unchanged and the core is untouched (`hd-pack` / `debug-hooks` only
# forward to the existing off-by-default `rustynes-core` telemetry, proven
# byte-identical), so AccuracyCoin is unaffected.
#
# `full` is ADDITIVE ON TOP OF the `default` set — it does NOT re-list the
# default features (`wasm-winit` / `emu-thread` / `help-tui` / `gpu-timing`),
# which `cargo` keeps active alongside `--features full` (the `--features` flag
# adds to the default set unless `--no-default-features` is passed). On native,
# the only default member that is wasm-flavoured (`wasm-winit`) is an inert
# empty marker, so it costs nothing here.
#
# WASM-only features are DELIBERATELY EXCLUDED — they cannot belong to a NATIVE
# build:
#   * `script-wasm`   — wasm-only AND mutually exclusive with `scripting`
#                       (piccolo vs. mlua: two distinct `rustynes-script`
#                       backends that cannot coexist). `full` takes `scripting`.
#   * `browser-cheevos` — wasm-only casual-mode browser RA. `full` takes the
#                       native `retroachievements` instead.
#   * `wasm-canvas`   — wasm-only lightweight embed mode.
full = [
    "retroachievements",
    "scripting",
    "script-ipc", # already implies `scripting`; listed for clarity
    "hd-pack",
    "debug-hooks",
    "av-record",
]

[[bin]]
name = "rustynes"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# v1.1.0 beta.2 (Workstream C) — `debug-hooks` enables the core's run-loop
# breakpoint/trace/event hooks for the debugger. The hooks are determinism-
# neutral no-ops until armed, so the headless test/bench builds (which depend on
# rustynes-core WITHOUT this feature) keep a byte-identical hot path.
rustynes-core = { workspace = true, features = ["debug-hooks"] }

# Phase 5 Sprint 1 frontend stack.
winit.workspace = true
wgpu.workspace = true
# v1.8.4 — shared WGSL sources (the CRT/scanline post-pass), reused by the Android
# wgpu renderer so the on-screen filter look matches across platforms.
rustynes-gfx-shaders.workspace = true
cpal.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
gilrs.workspace = true
rfd.workspace = true
directories.workspace = true
thiserror.workspace = true

# Phase 5 Sprint 2: TOML config + serde for input rebinding + rom hashing.
serde.workspace = true
toml.workspace = true
# v1.7.0 "Forge" H4 — per-game `<rom>.json` config overlay (de)serialization.
serde_json.workspace = true
sha2.workspace = true

# Frontend-only utilities. Both already in the dependency tree as
# transitive deps of wgpu; adding them as direct deps is free.
pollster = "0.4"
bytemuck = "1"
web-time.workspace = true

# v2.3.0 — netplay (rollback netcode + UDP transport). Native-only: it
# drives a `std::net::UdpSocket`, which does not exist on
# `wasm32-unknown-unknown`. All frontend netplay code is gated on
# `cfg(not(target_arch = "wasm32"))` (mirroring rfd/cpal/gilrs), so the two
# wasm builds compile with netplay absent (the panel shows a native-only note).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustynes-netplay.workspace = true

# v1.7.0 "Forge" G4 — movie-export hash hardening (native export path only, so
# the wasm size budget is untouched). `.fm2` wants an MD5 `romChecksum`, `.bk2`
# a SHA-1; recompute both from the loaded ROM and render as hex on export.
md-5.workspace = true
sha1.workspace = true
hex.workspace = true

# === v1.4.0 Workstream H — native CLI / terminal help & argument UX ===
# CRITICAL: these are ALL native-only. They live in this
# `cfg(not(target_arch = "wasm32"))` table so the wasm builds (and the wasm
# size budget) NEVER pull them in — the wasm `main` is an empty shim and a
# browser tab has no terminal. An orchestrator merging around v1.4.0 H should
# keep this whole block together.
#   * clap 4 (derive) — the argument parser (replaces the hand-rolled argv loop).
#     `color` styles `--help`; `cargo` reads version/author from env!.
#   * clap_complete — `rustynes completions <bash|zsh|fish|pwsh>`.
#   * color-print — compile-time ANSI for the styled `after_help` footer.
#   * anstyle — clap's styling vocabulary (Styles / AnsiColor) for `cli_styles()`.
#   * ratatui — the H3 interactive TUI help browser, behind the default-on
#     `help-tui` feature (`optional = true` → `dep:ratatui`). It re-exports
#     `crossterm`, so no separate crossterm dep is needed.
clap = { version = "4", features = ["derive", "color", "cargo"] }
clap_complete = "4"
color-print = "0.3"
anstyle = "1"
ratatui = { version = "0.30", optional = true }
# === end v1.4.0 Workstream H ===

# v1.0.0 — screenshot-to-clipboard (feature J). `arboard` provides the
# cross-platform system clipboard, including image (`set_image`) support, which
# the File -> Copy Screenshot to Clipboard action uses. Native-only: it is in
# this `cfg(not(target_arch = "wasm32"))` table (like rfd/cpal/gilrs) so it
# NEVER enters either wasm build (the browser has no equivalent image-clipboard
# path here; the menu item is `#[cfg]`-gated out on wasm). Default features are
# fine on the desktop hosts we target.
arboard = "3"

# v2.7.0 — RetroAchievements (native-only, behind the default-OFF
# `retroachievements` feature). `rustynes-cheevos` links the vendored rcheevos C
# library, which only builds for the native host; `optional = true` + the
# `retroachievements = ["dep:rustynes-cheevos"]` feature above keep it out of the
# default build, and placing it in this `cfg(not(target_arch = "wasm32"))`
# table guarantees the two wasm builds never attempt to compile it.
rustynes-cheevos = { path = "../rustynes-cheevos", optional = true }

# v1.8.6 — the RetroAchievements session state (login state machine, HUD model,
# per-game progress), extracted from this crate into `rustynes-ra` so the mobile
# bridge can drive the same session. Native-only, behind the `retroachievements`
# feature; `App` holds an `Option<rustynes_ra::RaSession>`.
rustynes-ra = { workspace = true, optional = true }

# v1.1.0 beta.3 (Workstream E) — Lua scripting (native-only, behind the
# default-OFF `scripting` feature). `rustynes-script` embeds vendored Lua 5.4 (C),
# which only builds for the native host; `optional = true` + the
# `scripting = ["dep:rustynes-script"]` feature keep it out of the default build,
# and this `cfg(not(target_arch = "wasm32"))` table guarantees the wasm builds
# never compile it.
rustynes-script = { workspace = true, optional = true }

# v2.7.1 — RetroAchievements badge images (native-only, gated by the
# `retroachievements` feature via `dep:ureq` / `dep:png`). `ureq` fetches the
# badge PNGs off the UI thread (same agent style as `rustynes-cheevos`); `png`
# decodes them to RGBA8 for upload as an `egui` texture. Both are kept in this
# `cfg(not(target_arch = "wasm32"))` table so the wasm builds never see them,
# and `optional = true` keeps them out of the default (feature-off) build.
ureq = { version = "3", default-features = false, features = ["rustls"], optional = true }
# `png` decodes the embedded app icon (window icon + About dialog, v1.1.0) and
# the RA badge PNGs. Non-optional on native (the icon ships in every desktop
# build); native-only (in this `cfg(not(wasm))` table) so the wasm builds never
# pull it in.
png = "0.18"

# v1.2.0 Workstream B — load ROMs directly from `.zip` archives. Native-only (in
# this `cfg(not(wasm))` table) and `default-features = false` + `deflate` only,
# so it reuses the already-present flate2 / miniz_oxide rather than pulling in
# the AES / zstd / bzip2 extras. The wasm load path receives raw bytes from the
# browser file picker, so it never needs zip.
zip = { version = "8", default-features = false, features = ["deflate"] }

# v1.8.5 — the HD-pack loader + compositor + HD audio moved to `rustynes-hdpack`
# (so the mobile bridge can reach it; the core is no_std). The frontend re-exports
# its `hdpack`/`hd_audio` modules, so existing `crate::hdpack`/`crate::hd_audio`
# paths keep working. Optional + behind the default-OFF `hd-pack` feature; it pulls
# the png/zip/lewton decode deps itself, so they leave the frontend's tree.
rustynes-hdpack = { workspace = true, optional = true }

# v2.8.0 Phase 5 increment 3 — best-effort emulation-thread priority
# elevation (Linux only). `elevate_thread_priority()` in `emu_thread.rs`
# tries `SCHED_RR` at a low real-time priority and falls back to a small
# negative nice, plus tightens `PR_SET_TIMERSLACK` — all per-THREAD (not the
# process) and degrading SILENTLY to today's behavior when the user lacks
# the `rtprio`/`nice` rlimit (join the `realtime` group / install
# `realtime-privileges`). `libc` is already in the native dep tree
# (transitively via cpal/alsa); this just makes it a direct dep. Behind the
# `emu-thread` feature so a feature-off build doesn't pull it.
libc = { version = "0.2", optional = true }

# v1.3.0 Sprint 1.1 — wasm32 target dependencies.
#
# The native dep stack above (`winit`/`wgpu`/`cpal`/`egui`/`gilrs`/
# `rfd`/`directories`) is gated behind `cfg(not(target_arch = "wasm32"))`
# in `src/main.rs` for the parts that don't compile to wasm; the
# wasm32 entry point lives in `src/wasm.rs` (Sprint 1.2+).
#
# The chip stack (`rustynes-core` and its dependencies) is already
# `no_std + alloc`-compatible (verified by the
# `thumbv7em-none-eabihf` CI gate), so this scaffolding doesn't
# require any chip-stack changes. The wasm-bindgen + web-sys deps
# bridge to the browser host. `gilrs` / `rfd` / `directories` are
# native-only and excluded from the wasm32 build (replaced by
# browser-native input + file-picker + storage APIs in Sprint 1.3).
#
# Note: cpal 0.15's wasm32 backend is incomplete. v1.3.0 Sprint 1.x
# uses a target-gated cpal 0.17 override here. See ADR 0008
# (pending) and `docs/audit/v1.3-sprint-1.1-wasm32-research-2026-05-24.md`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# v2.6.0 — netplay over WebRTC in the browser. `rustynes-netplay` compiles on
# wasm32 (the v2.5.0 Phase C gate): the portable rollback session core + the
# `WebRtcTransport` over an `RtcDataChannel`. The native frontend keeps its
# own `rustynes-netplay` dep (UDP, above); this wasm one drives the WebRTC path.
rustynes-netplay.workspace = true

# v1.2.0 Workstream F4 — EXPERIMENTAL wasm Lua scripting (behind the default-OFF
# `script-wasm` feature). Aliased to keep it cleanly distinct from the native
# `rustynes-script` dep (mlua, in the `cfg(not(wasm32))` table above): this one
# builds the pure-Rust piccolo backend with `--no-default-features --features
# script-wasm`, so it never compiles mlua's vendored C. Optional + only in this
# wasm32 table, so the default wasm builds (and all native builds) never see it.
rustynes-script-wasm = { package = "rustynes-script", path = "../rustynes-script", version = "2.0.0", default-features = false, features = ["script-wasm"], optional = true }

# v1.2.0 Workstream F4 — getrandom shims for the piccolo dep tree. piccolo
# pulls TWO getrandom majors on wasm32, each of which must explicitly opt into a
# browser backend (the `script-wasm` feature activates both `dep:` aliases):
#   * `rand` -> getrandom 0.2 — selected by the `js` Cargo feature.
#   * `ahash` -> getrandom 0.3 — selected by the `wasm_js` Cargo feature AND the
#     `--cfg getrandom_backend="wasm_js"` rustflag (set for wasm32 in the
#     workspace `.cargo/config.toml`). getrandom 0.3 split the backend selector
#     out of Cargo features into that cfg, so BOTH are required.
# Both are optional + activated only by `script-wasm`, so a default wasm build
# (ahash `no-rng`, no piccolo) never pulls either.
getrandom = { version = "0.2", features = ["js"], optional = true }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"], optional = true }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
    "Document", "Window", "Element", "HtmlElement", "HtmlCanvasElement",
    "HtmlInputElement", "Event", "EventTarget", "DragEvent", "DataTransfer",
    "File", "FileList", "FileReader", "Blob",
    # v1.3.0 Sprint 1.3 — canvas-2D rendering + keyboard input.
    # (The `console` namespace needs no feature flag — it's a core binding.)
    "CanvasRenderingContext2d", "ImageData", "KeyboardEvent",
    # v1.3.0 Sprint 1.4 — Web Audio output + localStorage save state.
    # ScriptProcessorNode is deprecated but universally supported and
    # needs no COOP/COEP headers (unlike AudioWorklet) — the pragmatic
    # MVP choice. See `docs/audit/v1.3-sprint-1.4-audio-savestate-2026-05-24.md`.
    "AudioContext", "AudioContextState", "AudioDestinationNode", "AudioNode",
    "AudioBuffer", "ScriptProcessorNode", "AudioProcessingEvent", "Storage",
    # v2.8.0 Phase 6 — AudioWorklet output (replaces ScriptProcessorNode).
    # The worklet `process()` runs on the audio rendering thread, decoupling
    # audio from the main-thread emulator/rAF loop (the wasm analog of the
    # native dedicated audio callback). No SharedArrayBuffer (GitHub Pages
    # can't set COOP/COEP) — samples cross via `port.postMessage`, occupancy
    # comes back the same way to drive the DRC servo. SPN stays as a fallback.
    "BaseAudioContext", "AudioWorklet", "AudioWorkletNode",
    "AudioWorkletNodeOptions", "MessagePort", "BlobPropertyBag",
    # v1.6.0 Sprint 4 — movie `.rnm` Blob download + save-state I/O.
    # `Url`/`HtmlAnchorElement` drive the synthetic-anchor download; `Blob`
    # (already enabled above) + these mint + click the object URL. `Node`
    # is needed to `append_child` the programmatically-created hidden
    # `<input id="rnm-input">` movie loader to the document body.
    "Url", "HtmlAnchorElement", "Node",
    # v1.7.0 "Forge" beta.5 Workstream H6 — `?settings=` share-links read
    # `window.location.search` / `.origin` / `.pathname`. The File System Access
    # API save path + the clipboard write + the Gamepad poll are all reached
    # dynamically (js-sys Reflect), so they need no extra web-sys features.
    "Location",
    # v1.4.0 Workstream E2 — IndexedDB save-state store (binary, multi-slot,
    # thumbnail-grid). Replaces the string-only localStorage slots (which
    # stay as a fallback + migration source). The `IdbRequest` event types
    # drive the Promise-wrapped async API in `wasm_idb.rs`.
    "IdbFactory", "IdbOpenDbRequest", "IdbRequest", "IdbDatabase",
    "IdbTransaction", "IdbTransactionMode", "IdbObjectStore", "DomStringList",
    # v2.6.0 — browser netplay: a WebSocket signaling client + the WebRTC
    # peer-connection + data-channel offer/answer/ICE handshake that yields
    # the `RtcDataChannel` wrapped by `rustynes_netplay::WebRtcTransport`.
    "WebSocket", "MessageEvent", "BinaryType", "CloseEvent",
    "RtcPeerConnection", "RtcConfiguration", "RtcDataChannel", "RtcDataChannelInit",
    "RtcDataChannelType", "RtcSessionDescription", "RtcSessionDescriptionInit",
    "RtcSdpType", "RtcIceServer", "RtcPeerConnectionIceEvent", "RtcIceCandidate",
    "RtcIceCandidateInit", "RtcDataChannelEvent",
    # v1.2.0 Workstream F1/F2 — on-screen touch input. The Pointer-Events
    # overlay lives in web/index.html (translucent DOM/CSS, zero Rust binary
    # weight) and calls the `wasm_touch` bridge fns; these features expose the
    # pointer/touch event types to Rust for any future native-side handler.
    "PointerEvent", "TouchEvent", "Touch", "TouchList", "MouseEvent", "UiEvent",
] }

[dev-dependencies]
tempfile = "3"
# Validate the embedded WGSL shaders at test time (the same WGSL front-end +
# validator wgpu uses at runtime), so a shader error (e.g. dynamically indexing
# a `let` array) fails CI instead of aborting the app when the user toggles the
# NTSC filter. Pinned to wgpu 29's naga (29.x) so the validation matches what
# ships AND the two don't duplicate in the lock.
naga = { version = "30", features = ["wgsl-in"] }
