[package]
name = "rustynes-mappers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NES cartridge mapper implementations"
keywords = ["nes", "mapper", "mmc1", "mmc3", "emulator"]
categories = ["emulators", "games"]

[dependencies]
bitflags.workspace = true
log.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[lints]
workspace = true
