[package]
name = "rustynes-mappers"
description = "Cartridge file format parsing and mapper implementations for the NES"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["nes", "ines", "mapper", "cartridge", "emulator"]
categories = ["emulators"]

[lints]
workspace = true

[features]
default = ["mapper-audio"]
# Enables tests that read CC0 / public-domain ROMs from `tests/roms/`. Off by
# default so `cargo test --workspace` stays fast on machines without the
# corpus checked out.
test-roms = []
# Enables on-cart audio extension for mappers that ship dedicated audio
# circuitry: VRC6, VRC7, MMC5, Sunsoft 5B, Namco 163, FDS. VRC6, Sunsoft 5B
# (FME-7), and Namco 163 wavetable audio are implemented as of v0.9.x;
# the rest are tracked under Track C2 and remain silent (`mix_audio`
# returns 0) even with this feature on. When the feature is OFF, the
# register decoders are still active (so save states from audio-enabled
# builds still load cleanly) but the channel oscillators are not advanced.
mapper-audio = []
# v2.0.0 R1/R2 closure attempt (2026-07-02) — MMC3 M2-phase-aware IRQ-pending-
# line visibility. When a qualifying (gap >= 3) A12 rising edge is seen during
# the POST-access (M2-high, φ2) half of the host CPU cycle, defer asserting
# `irq_pending_line` until the NEXT `notify_cpu_cycle` boundary instead of
# synchronously — modeling a 1-M2-cycle propagation delay for A12 rises that
# latch late in the cycle. Rises seen during the PRE-access (M2-low, φ1) half
# still assert immediately (today's unconditional behavior). This is
# STRUCTURALLY DISTINCT from the four rolled-back Attempts 1-4 and the
# Phase-B4 sub-dot filter-threshold attempt in
# `docs/adr/0002-irq-timing-coordination.md`: those applied a CONSTANT delay
# (or a gap-THRESHOLD adjustment) regardless of phase; this is a
# phase-CONDITIONAL deferral of the assertion's VISIBILITY, and it targets the
# promoted v2.0.0 "one-clock, every-cycle-bus-access" scheduler, which did not
# exist when the prior attempts were tried. Off by default — MMC3's IRQ
# pipeline is byte-identical to today when this feature (or the paired
# `rustynes-core/mmc3-m2-phase-irq`, which supplies the real phase data) is
# not enabled. See `docs/audit/r1r2-per-dot-scheduler-attempt-2026-07-02.md`.
mmc3-m2-phase-irq = []
# v2.1.5 "Fathom" F5.0 MMC3 R1/R2 residual instrumentation study — a PURELY
# OBSERVATIONAL probe (no behavior change) that answers the one open question
# left in ADR 0002's F5.0 closure: on the four failing sub-tests, does any
# *qualifying* (gap >= 3) A12 rising edge EVER land in the POST-access (M2-high,
# φ2, `sub_dot >= 2`) half of a host CPU cycle — the sub-cycle window where an
# ares-style M2-half-cycle falling-edge low-time filter would clock the MMC3
# counter but the integer `gap >= 3` model does not? Unlike `mmc3-m2-phase-irq`
# (which DEFERS the assertion and thereby CHANGES behavior when on), this
# feature only COUNTS qualifying rises by M2-phase half and surfaces the tallies
# via `MapperDebugInfo.extra`; the `irq_pending_line` assertion path is
# byte-identical to the default build, so the measurement faithfully reflects
# the real (unmodified) default execution. Requires the paired
# `rustynes-core/mmc3-a12-phase-probe`, which seeds the real M2-phase into
# `sub_dot` on the live one-clock scheduler path. Off by default (zero footprint
# on the shipped / no_std build). See ADR 0002 §"Decision update (2026-07-11,
# v2.1.5 F5.0 instrumentation study)".
mmc3-a12-phase-probe = []

[dependencies]
bitflags.workspace = true
thiserror.workspace = true
# rustynes-apu provides the OPLL/YM2413 FM synthesizer used by VRC7
# (mapper 85) audio. The dep is acyclic with the rest of the chip
# stack — rustynes-apu has no chip deps, so adding `rustynes-mappers -> rustynes-apu`
# introduces one new edge without creating a cycle. Default features
# disabled so no_std cross-compile stays green.
rustynes-apu = { workspace = true }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "mapper_dispatch"
path = "benches/mapper_dispatch.rs"
harness = false
